erDiagram
    %% ============================================================================
    %% FALLOUT 76 DATABASE - ENTITY RELATIONSHIP DIAGRAM
    %% ============================================================================
    %% Generated from f76_schema_normalized.sql
    %% This diagram shows the fully normalized database structure
    %% ============================================================================

    %% ============================================================================
    %% LOOKUP TABLES (Reference Data)
    %% ============================================================================

    races {
        INT id PK
        VARCHAR name UK "Human, Ghoul"
    }

    special_attributes {
        INT id PK
        CHAR code UK "S,P,E,C,I,A,L"
        VARCHAR name UK "Strength, etc"
    }

    effect_types {
        INT id PK
        VARCHAR name UK
        ENUM category "buff, debuff, healing, etc"
    }

    damage_types {
        INT id PK
        VARCHAR name UK "physical, energy, radiation, fire, cryo, poison"
    }

    weapon_types {
        INT id PK
        VARCHAR name UK "Ranged, Melee, Thrown"
    }

    weapon_classes {
        INT id PK
        VARCHAR name UK "Pistol, Rifle, Shotgun, Heavy Gun"
    }

    armor_types {
        INT id PK
        VARCHAR name UK "regular, power"
    }

    armor_classes {
        INT id PK
        VARCHAR name UK "Light, Sturdy, Heavy"
    }

    armor_slots {
        INT id PK
        VARCHAR name UK "Chest, Left Arm, Right Arm, etc"
    }

    %% ============================================================================
    %% CORE ENTITY TABLES
    %% ============================================================================

    weapons {
        INT id PK
        VARCHAR name UK
        INT weapon_type_id FK
        INT weapon_class_id FK
        INT min_level
        CHAR form_id
        TEXT source_url
    }

    armor {
        INT id PK
        VARCHAR name
        INT armor_class_id FK
        INT armor_slot_id FK
        INT armor_type_id FK
        VARCHAR set_name
        INT min_level
        CHAR form_id
        TEXT source_url
    }

    perks {
        INT id PK
        VARCHAR name UK
        INT special_id FK
        INT min_level
        CHAR form_id
    }

    legendary_perks {
        INT id PK
        VARCHAR name UK
        TEXT description
        CHAR form_id
    }

    mutations {
        INT id PK
        VARCHAR name UK
        CHAR form_id
        INT exclusive_mutation_id FK "Self-reference"
        TEXT source_url
    }

    consumables {
        INT id PK
        VARCHAR name UK
        ENUM category "food, drink, chem, aid, alcohol, beverage"
        VARCHAR subcategory
        INT duration_seconds
        DECIMAL hp_restore
        DECIMAL rads
        DECIMAL hunger_satisfaction
        DECIMAL thirst_satisfaction
        DECIMAL addiction_risk
        DECIMAL disease_risk
        DECIMAL weight
        INT value
        CHAR form_id
        VARCHAR crafting_station
        TEXT source_url
    }

    %% ============================================================================
    %% WEAPON RELATIONSHIP TABLES
    %% ============================================================================

    weapon_damage_components {
        INT id PK
        INT weapon_id FK
        INT damage_type_id FK
        DECIMAL min_damage
        DECIMAL max_damage "NULL if single value"
        INT level_tier "For multi-level weapons"
    }

    weapon_perks {
        INT weapon_id FK
        INT perk_id FK
    }

    weapon_legendary_perk_effects {
        INT weapon_id FK
        INT legendary_perk_id FK
    }

    weapon_perk_rules {
        INT id PK
        INT weapon_id FK
        INT perk_id FK
        ENUM weapon_class "pistol, rifle, heavy, melee, explosive, any"
        ENUM fire_mode "auto, semi, any"
        ENUM scope_state "scoped, unscoped, any"
        ENUM aim_state "ads, hip_fire, any"
        ENUM vats_state "in_vats, out_vats, any"
        VARCHAR mod_requirements
        VARCHAR note
    }

    %% ============================================================================
    %% ARMOR RELATIONSHIP TABLES
    %% ============================================================================

    armor_resistance_values {
        INT id PK
        INT armor_id FK
        INT damage_type_id FK
        DECIMAL resistance_value
        INT level_tier "For multi-level armor"
    }

    %% ============================================================================
    %% PERK RELATIONSHIP TABLES
    %% ============================================================================

    perk_races {
        INT perk_id FK
        INT race_id FK
    }

    perk_ranks {
        INT id PK
        INT perk_id FK
        INT rank
        TEXT description
        CHAR form_id
    }

    legendary_perk_races {
        INT legendary_perk_id FK
        INT race_id FK
    }

    legendary_perk_ranks {
        INT id PK
        INT legendary_perk_id FK
        INT rank
        TEXT description
    }

    legendary_perk_rank_effects {
        INT id PK
        INT legendary_perk_rank_id FK
        INT effect_type_id FK
        DECIMAL value
        VARCHAR unit "percent, flat, seconds, etc"
    }

    %% ============================================================================
    %% MUTATION RELATIONSHIP TABLES
    %% ============================================================================

    mutation_effects {
        INT id PK
        INT mutation_id FK
        INT effect_type_id FK
        DECIMAL value
        INT duration_seconds
        ENUM polarity "positive, negative"
        TEXT description
    }

    mutation_perk_interactions {
        INT id PK
        INT mutation_id FK
        INT perk_id FK "NULL if legendary_perk_id set"
        INT legendary_perk_id FK "NULL if perk_id set"
        ENUM interaction_type "suppression, enhancement"
    }

    %% ============================================================================
    %% CONSUMABLE RELATIONSHIP TABLES
    %% ============================================================================

    consumable_effects {
        INT id PK
        INT consumable_id FK
        INT effect_type_id FK
        DECIMAL value
        TEXT description
    }

    consumable_special_modifiers {
        INT id PK
        INT consumable_id FK
        INT special_id FK
        INT modifier "Can be negative"
    }

    %% ============================================================================
    %% RELATIONSHIPS - WEAPONS
    %% ============================================================================

    weapons ||--o{ weapon_damage_components : "has damage"
    weapons }o--|| weapon_types : "classified as"
    weapons }o--|| weapon_classes : "belongs to"
    weapons ||--o{ weapon_perks : "affected by"
    weapons ||--o{ weapon_legendary_perk_effects : "enhanced by"
    weapons ||--o{ weapon_perk_rules : "has conditional rules"

    weapon_damage_components }o--|| damage_types : "type"
    weapon_perks }o--|| perks : "references"
    weapon_legendary_perk_effects }o--|| legendary_perks : "references"
    weapon_perk_rules }o--|| perks : "references"

    %% ============================================================================
    %% RELATIONSHIPS - ARMOR
    %% ============================================================================

    armor ||--o{ armor_resistance_values : "has resistances"
    armor }o--|| armor_types : "type"
    armor }o--|| armor_classes : "class"
    armor }o--|| armor_slots : "slot"

    armor_resistance_values }o--|| damage_types : "resistance type"

    %% ============================================================================
    %% RELATIONSHIPS - PERKS
    %% ============================================================================

    perks }o--|| special_attributes : "associated with"
    perks ||--o{ perk_races : "available to"
    perks ||--o{ perk_ranks : "has ranks"

    perk_races }o--|| races : "references"

    legendary_perks ||--o{ legendary_perk_races : "available to"
    legendary_perks ||--o{ legendary_perk_ranks : "has ranks"

    legendary_perk_races }o--|| races : "references"
    legendary_perk_ranks ||--o{ legendary_perk_rank_effects : "provides effects"

    legendary_perk_rank_effects }o--|| effect_types : "type"

    %% ============================================================================
    %% RELATIONSHIPS - MUTATIONS
    %% ============================================================================

    mutations ||--o| mutations : "exclusive with"
    mutations ||--o{ mutation_effects : "has effects"
    mutations ||--o{ mutation_perk_interactions : "interacts with"

    mutation_effects }o--|| effect_types : "type"
    mutation_perk_interactions }o--o| perks : "regular perk"
    mutation_perk_interactions }o--o| legendary_perks : "legendary perk"

    %% ============================================================================
    %% RELATIONSHIPS - CONSUMABLES
    %% ============================================================================

    consumables ||--o{ consumable_effects : "provides effects"
    consumables ||--o{ consumable_special_modifiers : "modifies SPECIAL"

    consumable_effects }o--|| effect_types : "type"
    consumable_special_modifiers }o--|| special_attributes : "attribute"
